<resources>
    <string name="app_name">Math puzzles</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New game</string>
    <string name="options">Options</string>
    <string name="best_scores">Best scores</string>
    <string name="how_to_play">How to play</string>
    <string name="Level">Level: </string>
    <string name="lvlCounter" translatable="false">test</string>
    <string name="Tip">Tip:\n 2, 4, 6, 8, 10\n 20</string>
    <string name="mathematics">Mathematics</string>
    <string name="arithmetic">Arithmetic</string>
    <string name="puzzles">Regularities</string>
    <string name="blitz">Blitz</string>
    <string name="random">Random</string>
    <string name="level">Level</string>
    <string name="done">Done</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_done">You have done level: </string>
    <string name="test_lvl">test lvl</string>
    <string name="next_level">Next level</string>
    <string name="choose_lvl">Choose Level</string>
    <string name="main_menu">Main menu</string>
    <string name="right_series">Right answer is: </string>
    <string name="tutorial">Hi!\nThe game is about puzzles. You have to solve the puzzle and find right way to pass the level.\nGood luck!</string>
</resources>
